# evolva

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  Ouroboros.html  README.md  evolva-app-icon.psd  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
openspec/changes/agent-architecture/: design.md  proposal.md  tasks.md
openspec/changes/agent-architecture/specs/app-io/: spec.md
openspec/changes/agent-architecture/specs/build-preview/: spec.md
openspec/changes/agent-architecture/specs/llm-proxy/: spec.md
openspec/changes/agent-architecture/specs/project-fs/: spec.md
openspec/changes/agent-architecture/specs/self-mutation/: spec.md
openspec/changes/agent-architecture/specs/tool-use-loop/: spec.md
openspec/changes/archive/2026-04-03-implement-evolva-mvp/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-03-implement-evolva-mvp/specs/app-ui/: spec.md
openspec/changes/archive/2026-04-04-export-import-redesign/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-04-export-import-redesign/specs/app-io/: spec.md
openspec/changes/archive/2026-04-04-export-import-redesign/specs/app-ui/: spec.md
openspec/changes/archive/2026-04-04-export-import-redesign/specs/self-mutation/: spec.md
openspec/specs/app-io/: spec.md
openspec/specs/app-ui/: spec.md
openspec/specs/llm-proxy/: spec.md
openspec/specs/self-mutation/: spec.md
src/: app.js  index.html  sandbox.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json  test-file.txt
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
